  static builds, NVTX v3 or newer is required, as no static
  injection is possible. NVTX v2 may cause warnings to
  appear, as there are differences in the supported functions and NVTX
  tool features. When building Score-P with NVTX v2 or older,
  usage will require setting LD_PRELOAD. See OPEN_ISSUES for more
  information.
- Added support for MPI neighborhood collectives.

User tools and API improvements and changes:

- The 'xnonblock' option of SCOREP_MPI_ENABLE_GROUPS is deprecated.
  Measurements always record extended non-blocking events.
- The `scorep` tool now also provides the Git revision via the
  `--revision` flag, similar to `scorep-config`.
- Add a filter generation option to `scorep-score`, that generates a
  maximal filter including all filterable regions. This serves as
  starting point for a fully manual approach without the need to
  copy and paste from the default output.
- The help command of the Score-P instrumenter `scorep --help` will now
  only print the help for available Score-P adapters for its installation.
- For OpenMP instrumentation, the OMPT adapter is now used by default,
  if available. To use OPARI2 as the default instrumenter, please use
  `--enable-default=opari2` during configure. The option
  `--enable-default=ompt` will be removed in a future Score-P release.
- The HIP adapter is now enabled by default when configure detects
  the required libraries and a suitable Clang-based compiler.
- Intel compilers supporting `-tcollect` for instrumentation (i.e., the
  classic icc, icpc, ifort) will switch back to this option, instead of
  using `-finstrument-functions`. The former allows for compile-time
  filtering. The Clang-based icx, icpx, and ifx will continue to use
  `-finstrument-functions`.
- The option `--openmp` is deprecated. Please use `--thread=omp:opari2`
  instead.
- The deprecated PDT instrumentation mechanism has been removed.
- OMPT configure checks are less strict when trying to register