@@ -2,8 +2,6 @@
 
 include ../src/adapters/mpi/Makefile.mpi.inc.am
 include ../src/measurement/Makefile.mpi.inc.am
-include ../src/tools/config/Makefile.la_dependencies.inc.am
-
 include ../build-config/common/Makefile-rpaths.inc.am
 
 ## include tests
