@@ -58,23 +58,23 @@ scorep_config_CPPFLAGS = $(AM_CPPFLAGS) \
                          -I$(INC_ROOT)build-config/common \
                          -I$(INC_ROOT)src/tools/lib
 
-SCOREP_CONFIG_LIBRARY_DEPS += $(LIB_DIR_SCOREP)../src/scorep_config_library_dependencies_backend_inc.hpp
+SCOREP_CONFIG_LIBRARY_DEPS += ../src/config-external-libs-backend.hpp
 if CROSS_BUILD
-BACKEND_TARGETS += $(LIB_DIR_SCOREP)../src/scorep_config_library_dependencies_backend_inc.hpp
+BACKEND_TARGETS += ../src/config-external-libs-backend.hpp
 endif CROSS_BUILD
 
 if HAVE_MPI_SUPPORT
-SCOREP_CONFIG_LIBRARY_DEPS += $(LIB_DIR_SCOREP_MPI)../src/scorep_config_library_dependencies_mpi_backend_inc.hpp
-MPI_TARGETS += $(LIB_DIR_SCOREP_MPI)../src/scorep_config_library_dependencies_mpi_backend_inc.hpp
+SCOREP_CONFIG_LIBRARY_DEPS += ../src/config-external-libs-mpi_backend.hpp
+MPI_TARGETS += ../src/config-external-libs-mpi_backend.hpp
 endif HAVE_MPI_SUPPORT
 
 if HAVE_SHMEM_SUPPORT
-SCOREP_CONFIG_LIBRARY_DEPS += $(LIB_DIR_SCOREP_SHMEM)../src/scorep_config_library_dependencies_shmem_backend_inc.hpp
-SHMEM_TARGETS += $(LIB_DIR_SCOREP_SHMEM)../src/scorep_config_library_dependencies_shmem_backend_inc.hpp
+SCOREP_CONFIG_LIBRARY_DEPS += ../src/config-external-libs-shmem_backend.hpp
+SHMEM_TARGETS += ../src/config-external-libs-shmem_backend.hpp
 endif HAVE_SHMEM_SUPPORT
 
-SCOREP_CONFIG_LIBRARY_DEPS += $(LIB_DIR_SCOREP_SCORE)../src/scorep_config_library_dependencies_score_inc.hpp
-SCORE_TARGETS += $(LIB_DIR_SCOREP_SCORE)../src/scorep_config_library_dependencies_score_inc.hpp
+SCOREP_CONFIG_LIBRARY_DEPS += ../src/config-external-libs-score.hpp
+SCORE_TARGETS += ../src/config-external-libs-score.hpp
 
 scorep_config_LDADD = \
     libscorep_tools.la \
