@@ -1,48 +1,0 @@
-## -*- mode: makefile -*-
-
-##
-## This file is part of the Score-P software (http://www.score-p.org)
-##
-## Copyright (c) 2009-2013,
-## RWTH Aachen University, Germany
-##
-## Copyright (c) 2009-2013,
-## Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
-##
-## Copyright (c) 2009-2013,
-## Technische Universitaet Dresden, Germany
-##
-## Copyright (c) 2009-2013,
-## University of Oregon, Eugene, USA
-##
-## Copyright (c) 2009-2013, 2017,
-## Forschungszentrum Juelich GmbH, Germany
-##
-## Copyright (c) 2009-2013,
-## German Research School for Simulation Sciences GmbH, Juelich/Aachen, Germany
-##
-## Copyright (c) 2009-2013,
-## Technische Universitaet Muenchen, Germany
-##
-## This software may be modified and distributed under the terms of
-## a BSD-style license. See the COPYING file in the package base
-## directory for details.
-##
-
-## file       src/tools/config/Makefile.la_dependencies.inc.am
-
-CLEANFILES += ../src/scorep_config_library_dependencies_@AFS_PACKAGE_BUILD_name@_inc.hpp
-../src/scorep_config_library_dependencies_@AFS_PACKAGE_BUILD_name@_inc.hpp: | $(srcdir)/../build-config/common/generate-library-dependencies.sh
-../src/scorep_config_library_dependencies_@AFS_PACKAGE_BUILD_name@_inc.hpp: $(lib_LTLIBRARIES)
-	$(AM_V_GEN)$(srcdir)/../build-config/common/generate-library-dependencies.sh @AFS_PACKAGE_BUILD_name@ $^ >$@.t && \
-            if test -e $@; then \
-                if cmp --silent $@ $@.t; then \
-                    $(RM) $@.t; \
-                else \
-                    $(RM) $@; \
-                    $(am__mv) $@.t $@; \
-                fi; \
-            else \
-                $(am__mv) $@.t $@; \
-            fi || \
-            ($(RM) $@ $@.t; exit 1)
