@@ -13,7 +13,7 @@
  * Copyright (c) 2009-2013,
  * University of Oregon, Eugene, USA
  *
- * Copyright (c) 2009-2013, 2017,
+ * Copyright (c) 2009-2013, 2017, 2024,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2009-2014,
@@ -45,18 +45,19 @@
 
 using namespace std;
 
-/* library_dependencies_inc.hpp are generated by
- * build-config/common/generate-library-dependency.sh
+/* config-external-libs-<AFS_BUILD_name>.hpp are generated by
+ * build-config/common/Makefile-rpaths.inc.am, see the
+ * $(CONFIG_EXTERNAL_LIBS_HPP) target.
  */
 
-#include <scorep_config_library_dependencies_backend_inc.hpp>
+#include <config-external-libs-backend.hpp>
 #if HAVE( MPI_SUPPORT )
-#include <scorep_config_library_dependencies_mpi_backend_inc.hpp>
+#include <config-external-libs-mpi_backend.hpp>
 #endif /* MPI_SUPPORT */
 #if HAVE( SHMEM_SUPPORT )
-#include <scorep_config_library_dependencies_shmem_backend_inc.hpp>
+#include <config-external-libs-shmem_backend.hpp>
 #endif /* SHMEM_SUPPORT */
-#include <scorep_config_library_dependencies_score_inc.hpp>
+#include <config-external-libs-score.hpp>
 
 /* **************************************************************************************
                                                   class SCOREP_Config_LibraryDependencies
@@ -64,19 +65,14 @@ using namespace std;
 
 SCOREP_Config_LibraryDependencies::SCOREP_Config_LibraryDependencies( void )
 {
-    deque<string> libs;
-    deque<string> ldflags;
-    deque<string> rpaths;
-    deque<string> dependency_las;
-
-    add_library_dependencies_backend( libs, ldflags, rpaths, dependency_las, &m_la_objects );
+    add_library_dependencies_backend( &m_la_objects );
     #if HAVE( MPI_SUPPORT )
-    add_library_dependencies_mpi_backend( libs, ldflags, rpaths, dependency_las, &m_la_objects );
+    add_library_dependencies_mpi_backend( &m_la_objects );
     #endif /* MPI_SUPPORT */
     #if HAVE( SHMEM_SUPPORT )
-    add_library_dependencies_shmem_backend( libs, ldflags, rpaths, dependency_las, &m_la_objects );
+    add_library_dependencies_shmem_backend( &m_la_objects );
     #endif /* SHMEM_SUPPORT */
-    add_library_dependencies_score( libs, ldflags, rpaths, dependency_las, &m_la_objects );
+    add_library_dependencies_score( &m_la_objects );
 }
 
 void
