@@ -13,7 +13,7 @@
  * Copyright (c) 2009-2013,
  * University of Oregon, Eugene, USA
  *
- * Copyright (c) 2009-2013, 2017,
+ * Copyright (c) 2009-2013, 2017, 2024,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2009-2013,
@@ -45,8 +45,9 @@
 
 /**
  * A class to store and analyze the dependencies from libraries. To generate
- * the dependencies, the .la files are parsed and initialization code is
- * generated by build-config/common/generate-library-dependencies.sh
+ * the dependecies, Makefile variables are parsed and header files are generated,
+ * see build-config/common/Makefile-rpaths.inc.am. Note that is is taken care of
+ * that no libdirs from SYS_LIB_DLSEARCH_PATH_SPEC will make it to m_library_objects.
  */
 class SCOREP_Config_LibraryDependencies final
 {
